<resources>
    <string name="app_name">Coursy</string>
    <string name="register_email">Your email…</string>
    <string name="register_password">Your password…</string>
    <string name="register_login_register">login / register</string>
    <string name="unknown_error">Unknown error..check connection</string>
    <string name="invalid_login">Invalid login</string>
    <string name="login_success">Login success</string>
    <string name="login">Login</string>
    <string name="register_login">Login</string>
    <string name="register_register">Register</string>
    <string name="register_register_account">Register new account</string>
    <string name="register_new_acc">Register new account</string>
    <string name="email_used">Email already in use</string>
    <string name="register_success">Register was successful</string>
    <string name="moderator_panel">Moderator panel</string>
    <string name="give_access">Give moderator access</string>
    <string name="remove_access">Remove moderator access</string>
    <string name="user_email">User email…</string>
    <string name="email_not_found">User with the email provided not found</string>
    <string name="gave_access">Moderator access was given to provided user</string>
    <string name="user_is_mod">User is already a moderator</string>
    <string name="search_classes">Search for classes</string>
    <string name="class_name">Class name…</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">unsubscribe</string>
    <string name="subscribed_success">Subscribed successfully</string>
    <string name="unsubscribed_success">Unsubscribed successfully</string>
    <string name="class_events">Class events</string>
    <string name="get_directions">get directions</string>
    <string name="repeating_every">repeating every %d days</string>
    <string name="search_classess">Search classes</string>
    <string name="addclas">Add class</string>
    <string name="addclass">Add class</string>
    <string name="school">School</string>
    <string name="addyourclas">Add your class</string>
    <string name="schools_not_loadd">Schools not loaded yet. Try again maybe</string>
    <string name="fillfields">Please fill in the fields!</string>
    <string name="addeventclass">Add event to class</string>
    <string name="event_name">Event name</string>
    <string name="addevent">Add your event</string>
    <string name="is_repetable">Is repetable</string>
    <string name="date">Date</string>
    <string name="repeatxdays">Repeat every X days</string>
    <string name="room">Room</string>
    <string name="rooms_not_loaded">Rooms were not loaded yet..wait a little bit</string>
    <string name="school_without_rooms">The class school doesn\'t have any rooms currently.</string>
    <string name="event_added">Event was successfully added!</string>
    <string name="date_is_empty">Date can\'t be empty!</string>
    <string name="name_is_empty">Name can\'t be empty</string>
    <string name="repetable_days_invalid">Invalid days count. Must be an integer, greater than 0.</string>
    <string name="logout">Logout</string>
    <string name="event_deleted">Event was deleted.</string>
    <string name="room_room">"Room "</string>
    <string name="commhere">Your comment here</string>
    <string name="comments">Comments</string>
    <string name="comm_added">Comment was added</string>
    <string name="room_is_empty">Room can\'t be empty</string>
    <string name="comment_empty">Comment can\'t be empty</string>
</resources>
