<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.bolnizar.itfest.activities.AddClassActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/add_class_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/class_name"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/add_class_school_container"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >

        <EditText
            android:id="@+id/add_class_school"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/school"
            />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/home_add_classes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="10dp"
        android:background="@drawable/button_selector"
        android:text="@string/addyourclas"
        android:textColor="@color/white"
        />
</LinearLayout>
